Fix some changelog section headings and wordings

--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -2,24 +2,24 @@
 title: "API"
 ---
 
-### User Search and Introspection insights available in the dashboard (Jun 19)
+### User Search and Introspection insights available in the dashboard (Jun 24)
 
-You can now search and filter through your teams' users in the dashboard!
+You can now search and filter through users in your Team in the Vital Dashboard.
 
 <Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
 
 Find your user by typing their Client User ID or Vital User ID into the search bar. For lab testing users: Name, Email and Phone Number are also supported.
 
-Click on a user row to access the brand new User Details page.
-You can view their connections status, available resources, insights from the [Introspection API](/api-reference/introspection/user-resources) and more!
+Click on a user row to access the new User Details page.
+You can view their connections status, available resources, insights from the [Introspection API](/api-reference/introspection/user-resources) and more.
 </Accordion>
 
 
-### Azure Event Hubs as ETL Pipeline destination (Jun 14)
+### Azure Event Hubs as ETL Pipeline destination (Jun 24)
 
-You can now receive [events](/webhooks/introduction) from Vital directly to your Azure Event Hubs.
+You can now receive [events](/webhooks/introduction) from Vital directly with your Azure Event Hubs.
 
-More about ETL Pipelines [here](/webhooks/etl-pipelines).
+Check out the [ETL Pipelines](/webhooks/etl-pipelines) documentation.
 
 <Info>
 ETL Pipelines are available for [the Scale plan](https://tryvital.io/pricing).
