Add create API docs

--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,6 +1,14 @@
 ---
 title: "API"
 ---
+### Create Lab Tests With Provider IDs  (Jun 25)
+It is now possible to create lab tests using the Laboratory's unique provider id.
+This allows payloads to be shared across sandbox and production.
+
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+Check out the [Create a Lab Test](/lab/workflow/create-test) documentation.
+
+</Accordion>
 
 ### Ask on Order Entry (AOE)  (Jun 3)
 You can now order panels with AOE requirements via the API.
