--- a/docs/webhooks/etl-pipelines.mdx
+++ b/docs/webhooks/etl-pipelines.mdx
@@ -2,6 +2,8 @@
 title: "ETL Pipelines"
 ---
 
+import OrgManagementAPI from '/snippets/org-management-api.mdx';
+
 <Info>
 ETL Pipelines integration is available for [the Scale plan](https://tryvital.io/pricing).
 </Info>
@@ -35,19 +37,57 @@ The following destinations are supported:
 | Google Cloud Pub/Sub | IAM | [Pub/Sub Message Ordering](https://cloud.google.com/pubsub/docs/ordering) is supported. |
 | Azure Event Hub | [SAS Key](https://learn.microsoft.com/en-gb/azure/service-bus-messaging/service-bus-sas) | Depends on your Azure Event Hub configuration. |
 
-For evaluation and zero downtime transition, Vital supports double writing both to your Svix webhook endpoints,
-and to the message queue source of your ETL pipelines.
-
 ## Event Schema
 
-Vital ETL Pipelines integration publishes all events in the exact same JSON schema as our default Svix webhook offering.
+Webhooks, ETL Pipelines and our API endpoints all share the same JSON object schema. Webhooks and ETL Pipelines use
+identical JSON event payload structure.
+
 Check out our [Event Catalog](/event-catalog).
+
+## Features
+
+### Data compression
+
+Vital does not compress payload blobs that are smaller than 1 KiB. Please refer to the destination-specific
+documentation below on how to detect a compressed blob versus an uncompressed blob.
+
+### Static outbound IPs
+
+Vital establish connections to your ETL Pipeline destination through a static pool of IPs. Contact Vital support to
+obtain the up-to-date static IP list.
+
+### Double writing during transition
+
+To ensure smooth switchover from Webhooks to your new ETL Pipelines destination, Vital supports double writing events
+to the combination of:
+
+* all your Webhook endpoints; and
+* your ETL Pipelines destination.
+
+### Pushed Historical Data
+
+When you use ETL Pipelines, Vital can _push_ all the historical data as `daily.data.*` data events to your ETL Pipelines
+destination.
+The data-less `historical.data.*.created` event would still be emitted to denote the completion of historical pull.
+
+
+## Configuring ETL Pipelines
+
+You can change the ETL Pipelines configuration on your Teams at any time through the
+[Set Team ETL Pipelines](https://docs.tryvital.io/api-reference/org-management/team-etl-pipeline/upsert-team-etl-pipelines) endpoint
+of the Org Management API.
+
+Your new configuration is typically active as soon as the endpoint has acknowledged your request.
+
+<Info>
+Feel free to reach out Vital support if you need assisted setup, or if you need a Vital Org Key to access the Org Management API.
+</Info>
 
 ## Google Cloud Pub/Sub
 
 ### Message Structure
 
-Each message would be published by Vital message queue with the following attributes:
+Each message would be published by Vital with the following attributes:
 
 | Type | Key | Value |
 | --- | --- | --- |
@@ -61,16 +101,16 @@ Each message would be published by Vital message queue with the following attrib
 <Info>Payload smaller than 1KiB would not be compressed.</Info>
 
 <Info>
-At this time, Vital message queue publishes exclusively JSON blobs (`blob_type == json`).
+At this time, Vital publishes exclusively JSON blobs (`blob_type == json`).
 
 Having said that, you are strongly encouraged to check for and drop any messages with unrecognized `blob_type` and `blob_codec`.
 </Info>
 
 ### Pub/Sub message ordering
 
-If you wish to receive message for each Vital user in their publication order, Vital message queue supports Pub/Sub Message Ordering, and uses the Vital User ID as the message ordering key. 
+If you wish to receive message for each Vital user in their publication order, Vital supports Pub/Sub Message Ordering, and uses the Vital User ID as the message ordering key. 
 
-Vital message queue publishes all messages through the `us-central1` and `europe-west1` PubSub regional endpoints.
+Vital publishes all messages through the `us-central1` and `europe-west1` PubSub regional endpoints.
 
 <Warning>
 Pub/Sub Exactly Once Delivery is **discouraged** to be used together with Message Ordering. Our own trial suggested that the combination would struggle to move high volume of messages.
@@ -95,20 +135,11 @@ Or more specifically these permissions if you wish to create a custom IAM role w
 | Production | US | customer-topics-us@vital-prod-307415.iam.gserviceaccount.com |
 | Production | Europe | customer-topics-eu@vital-prod-307415.iam.gserviceaccount.com |
 
-### Information needed by Vital
-
-When you have completed the setup, please provide Vital the following information:
-
-- Your Google Cloud Project ID
-- Your Cloud Pub/Sub Topic name
-- Whether or not you want messages to be published under Pub/Sub Message Ordering
-- Whether or not you want larger blobs (≥ 1KiB) to be gzipped
-
 ## RabbitMQ
 
 ### Message Structure
 
-Each message would be published by Vital message queue with the following attributes:
+Each message would be published by Vital with the following attributes:
 
 | Key | Value |
 | --- | --- |
@@ -120,16 +151,16 @@ Each message would be published by Vital message queue with the following attrib
 <Info>Payload smaller than 1KiB would not be compressed.</Info>
 
 <Info>
-At this time, Vital message queue publishes exclusively JSON blobs (`blob_type == json`).
+At this time, Vital publishes exclusively JSON blobs (`blob_type == json`).
 
 Having said that, you are strongly encouraged to check for and drop any messages with unrecognized `Content-Type` and `Content-Encoding`.
 </Info>
 
 ### Exchange requirements
 
-Vital message queue only supports password authentication at this time.
+Vital only supports password authentication at this time.
 
-Vital message queue publishes messages with the following settings:
+Vital publishes messages with the following settings:
 
 - Publisher Confirm mode is required
 - Messages are published with the Mandatory flag but without the Immediate flag.
@@ -137,18 +168,12 @@ Vital message queue publishes messages with the following settings:
 
 Please get in touch if these need to be configured differently for your RabbitMQ exchange.
 
-### Information needed by Vital
-
-When you have completed the setup, please provide Vital the following information:
-
-- An `ampqs://` connection string with username and password embedded
-- Whether or not you want larger blobs (≥ 1KiB) to be gzipped.
 
 ## Azure Event Hub
 
 ### Message Structure
 
-Each message would be published by Vital message queue with the following attributes:
+Each message would be published by Vital with the following attributes:
 
 | Type | Key | Value |
 | --- | --- | --- |
@@ -162,14 +187,7 @@ Each message would be published by Vital message queue with the following attrib
 <Info>Payload smaller than 1KiB would not be compressed.</Info>
 
 <Info>
-At this time, Vital message queue publishes exclusively JSON blobs (`blob_type == json`).
+At this time, Vital publishes exclusively JSON blobs (`blob_type == json`).
 
 Having said that, you are strongly encouraged to check for and drop any messages with unrecognized `Content-Type` and `Content-Encoding`.
 </Info>
-
-### Information needed by Vital
-
-When you have completed the setup, please provide Vital the following information:
-
-- A [connection string](https://learn.microsoft.com/en-us/azure/event-hubs/event-hubs-get-connection-string) of the following format:  `Endpoint=sb://<NamespaceName>.servicebus.windows.net/;SharedAccessKeyName=<KeyName>;SharedAccessKey=<KeyValue>`
-- Name of your event hub
