--- a/docs/lab/workflow/create-test.mdx
+++ b/docs/lab/workflow/create-test.mdx
@@ -86,7 +86,7 @@ data = client.LabTests.create_test(
 ```
 
 <Note>
-It is possible to create a test with either the marker id or provider id. Provider ids are the recommended way, since these are shared accross environments. Not all labs provide these, so in their bbsence, use the marker id.
+It is possible to create a test with either the marker id or provider id. Provider ids are the recommended way, since these are shared accross environments. Not all labs provide these, so in their absence, use the marker id.
 </Note>
 
 Once your lab test creation is successful you will receive the following response:
