--- a/docs/api-reference/lab-testing/area-info.mdx
+++ b/docs/api-reference/lab-testing/area-info.mdx
@@ -100,9 +100,9 @@ fmt.Printf("Received data %s\n", response)
         }
     ]
   },
-  "psc": {
-    "locations": {
-      "labcorp": {
+  "central_labs": {
+    "labcorp": {
+      "patient_service_centers": {
         "within_radius": 5,
         "radius": 25000
       }
