--- a/docs/api-reference/lab-testing/area-info.mdx
+++ b/docs/api-reference/lab-testing/area-info.mdx
@@ -104,7 +104,7 @@ fmt.Printf("Received data %s\n", response)
     "labcorp": {
       "patient_service_centers": {
         "within_radius": 5,
-        "radius": 25000
+        "radius": "25"
       }
     }
   }
