--- a/docs/api-reference/lab-testing/order-psc-info.mdx
+++ b/docs/api-reference/lab-testing/order-psc-info.mdx
@@ -75,7 +75,8 @@ fmt.Printf("Received data %s\n", response)
 ```json Response
 {
   "lab_id": 27,
-  "pscs": [
+  "slug": "labcorp",
+  "patient_service_centers": [
     {
       "metadata": {
         "name": "LABCORP",
@@ -88,7 +89,7 @@ fmt.Printf("Received data %s\n", response)
         "fax_number": "844-346-5903",
         "hours": null
       },
-      "distance": 1829
+      "distance": "25",
     },
   ]
 }
