--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,6 +1,15 @@
 ---
 title: "API"
 ---
+### Patient Service Center (PSC) Availability API (Jul 1)
+It is now possible to verify lab PSC availability in regards to a zip code, radius or order.
+
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+Check out the [Patient Service Center](/lab/walk-in/locations) documentation.
+
+</Accordion>
+
+
 ### Create Lab Tests With Provider IDs  (Jun 25)
 It is now possible to create lab tests using the Laboratory's unique provider id.
 This allows payloads to be shared across sandbox and production.
