--- a/docs/event-catalog/daily.data.body_temperature.created.mdx
+++ b/docs/event-catalog/daily.data.body_temperature.created.mdx
@@ -80,13 +80,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "5f75d6ff-7c19-4700-826d-31b680d882be"
+    "user_id": "6b759123-d16b-4fe6-b5f9-cb5e03bc1c52"
   },
   "event_type": "daily.data.body_temperature.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
