--- a/docs/event-catalog/daily.data.body_temperature.updated.mdx
+++ b/docs/event-catalog/daily.data.body_temperature.updated.mdx
@@ -80,13 +80,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "61e8495c-b219-431b-8984-f6720f42b2ea"
+    "user_id": "26285782-b14f-467f-9bdd-2156e4da1f6e"
   },
   "event_type": "daily.data.body_temperature.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
