--- a/docs/event-catalog/daily.data.body_temperature_delta.created.mdx
+++ b/docs/event-catalog/daily.data.body_temperature_delta.created.mdx
@@ -80,13 +80,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "41eb3b6e-2ddd-4b0f-93e4-cec999089181"
+    "user_id": "f661be97-a6fe-4a38-a320-16fb49bc6d3b"
   },
   "event_type": "daily.data.body_temperature_delta.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
