--- a/docs/event-catalog/daily.data.cholesterol.updated.mdx
+++ b/docs/event-catalog/daily.data.cholesterol.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -141,7 +141,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "9e11e57e-e032-48d9-9f07-04f061a942c1"
+    "user_id": "49aa805a-b036-4677-81e4-ce5e0611f925"
   },
   "event_type": "daily.data.cholesterol.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
