--- a/docs/event-catalog/daily.data.floors_climbed.updated.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "cd0b3e27-8e09-410a-ba19-cd7c4271654f"
+    "user_id": "aba6627f-fed4-4e34-941f-41c712dfed9b"
   },
   "event_type": "daily.data.floors_climbed.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
