--- a/docs/event-catalog/daily.data.weight.updated.mdx
+++ b/docs/event-catalog/daily.data.weight.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "982d9955-0ef5-4fe8-9b66-833fa470bc5c"
+    "user_id": "d47f2b40-9aea-49b3-a5a5-f6801689d149"
   },
   "event_type": "daily.data.weight.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
