--- a/docs/event-catalog/daily.data.blood_oxygen.created.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "e3a7f5f1-5c68-4c56-8a68-2425932642c9"
+    "user_id": "d952835f-0732-4547-be31-3d0d547cc84d"
   },
   "event_type": "daily.data.blood_oxygen.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
