--- a/docs/event-catalog/daily.data.blood_oxygen.updated.mdx
+++ b/docs/event-catalog/daily.data.blood_oxygen.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "2c76d12e-6b26-4f10-b085-7dd04fdc3c46"
+    "user_id": "47dead09-02ed-4f28-9535-a0605bfa9b2f"
   },
   "event_type": "daily.data.blood_oxygen.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
