--- a/docs/event-catalog/daily.data.body_temperature_delta.updated.mdx
+++ b/docs/event-catalog/daily.data.body_temperature_delta.updated.mdx
@@ -80,13 +80,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -134,7 +134,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "e1ad8d1b-4ae8-4d2e-8d23-0af18de0c359"
+    "user_id": "28a24367-3c7a-48eb-9eb5-2585b22c9409"
   },
   "event_type": "daily.data.body_temperature_delta.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
