--- a/docs/event-catalog/daily.data.caffeine.created.mdx
+++ b/docs/event-catalog/daily.data.caffeine.created.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "c1cf466f-5df2-462f-ba28-fcbf88d6802e"
+    "user_id": "64b4eaea-5b7b-4374-ad34-7efbe2f9fe36"
   },
   "event_type": "daily.data.caffeine.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
