--- a/docs/event-catalog/daily.data.caffeine.updated.mdx
+++ b/docs/event-catalog/daily.data.caffeine.updated.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "a812c36d-4966-4b89-83cf-259dd67add6f"
+    "user_id": "4ade9122-733d-44f3-a959-0900290caf52"
   },
   "event_type": "daily.data.caffeine.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
