--- a/docs/event-catalog/daily.data.calories_active.created.mdx
+++ b/docs/event-catalog/daily.data.calories_active.created.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "636170f1-1fd5-489c-8498-7c55bf6983db"
+    "user_id": "7cbfb1fd-4740-4eb5-b02b-ba5d02ddae4e"
   },
   "event_type": "daily.data.calories_active.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
