--- a/docs/event-catalog/daily.data.calories_active.updated.mdx
+++ b/docs/event-catalog/daily.data.calories_active.updated.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "726cfe0c-d18a-4b31-af31-3c64e644f814"
+    "user_id": "7e3bb542-86a8-425a-a31f-da32fae75d76"
   },
   "event_type": "daily.data.calories_active.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
