--- a/docs/event-catalog/daily.data.calories_basal.created.mdx
+++ b/docs/event-catalog/daily.data.calories_basal.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "e75ab0be-c10c-4a65-bd40-acb6fde572c0"
+    "user_id": "769dcd00-2eac-4134-b784-bc34730b5b65"
   },
   "event_type": "daily.data.calories_basal.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
