--- a/docs/event-catalog/daily.data.cholesterol.created.mdx
+++ b/docs/event-catalog/daily.data.cholesterol.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -141,7 +141,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "0529e60a-2306-451d-9051-312e076251dd"
+    "user_id": "7d6eac29-daea-4103-a1b6-e46f506f579c"
   },
   "event_type": "daily.data.cholesterol.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
