--- a/docs/event-catalog/daily.data.electrocardiogram_voltage.created.mdx
+++ b/docs/event-catalog/daily.data.electrocardiogram_voltage.created.mdx
@@ -65,13 +65,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -117,7 +117,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "1aca9822-b22d-4791-8a7b-4745142bcb4e"
+    "user_id": "fb515209-5dde-4ba1-91bf-1257c533a247"
   },
   "event_type": "daily.data.electrocardiogram_voltage.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
