--- a/docs/event-catalog/daily.data.fat.created.mdx
+++ b/docs/event-catalog/daily.data.fat.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "9dedddd5-1160-4887-b55c-c7bf4e1a0ee7"
+    "user_id": "3967386b-dffb-41a3-867d-6eb25d480d8c"
   },
   "event_type": "daily.data.fat.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
