--- a/docs/event-catalog/daily.data.floors_climbed.created.mdx
+++ b/docs/event-catalog/daily.data.floors_climbed.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "560d3d26-6514-497c-8aa3-d8b0d828d58c"
+    "user_id": "63a3dbf8-942a-477b-b56e-52d4ddc191db"
   },
   "event_type": "daily.data.floors_climbed.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
