--- a/docs/event-catalog/daily.data.glucose.created.mdx
+++ b/docs/event-catalog/daily.data.glucose.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "cfe0988b-e99a-496d-98b2-3c697e3648e1"
+    "user_id": "1c44a0ec-91c4-45bf-b614-99fb6389a724"
   },
   "event_type": "daily.data.glucose.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
