--- a/docs/event-catalog/daily.data.glucose.updated.mdx
+++ b/docs/event-catalog/daily.data.glucose.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "bff28ff5-3692-4c34-ae71-ee3cd9d67e74"
+    "user_id": "8a7a93dc-c50b-419c-8cd7-3da77e820ad0"
   },
   "event_type": "daily.data.glucose.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
