--- a/docs/event-catalog/daily.data.heartrate.created.mdx
+++ b/docs/event-catalog/daily.data.heartrate.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "4bb56ca6-d38c-49ed-9c13-73960c50d000"
+    "user_id": "aa762007-c880-455d-b6ad-594bc6472482"
   },
   "event_type": "daily.data.heartrate.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
