--- a/docs/event-catalog/daily.data.hypnogram.created.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.created.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "5902e0d5-e761-4cf0-b421-35efc159e169"
+    "user_id": "28d12117-0856-43e0-b051-457f47675050"
   },
   "event_type": "daily.data.hypnogram.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
