--- a/docs/event-catalog/daily.data.hypnogram.updated.mdx
+++ b/docs/event-catalog/daily.data.hypnogram.updated.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "cc039dd9-3c95-452b-a17e-07315705c90a"
+    "user_id": "feb5c92b-8bd7-45da-9a71-f6b57025cac3"
   },
   "event_type": "daily.data.hypnogram.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
