--- a/docs/event-catalog/daily.data.ige.created.mdx
+++ b/docs/event-catalog/daily.data.ige.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "73eff3fc-b89b-4692-9c0a-5c13f9ce861b"
+    "user_id": "6d47ccef-345f-4349-a6a5-8f94b0c99e22"
   },
   "event_type": "daily.data.ige.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
