--- a/docs/event-catalog/daily.data.igg.updated.mdx
+++ b/docs/event-catalog/daily.data.igg.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "5b086ad4-21a9-4091-a8b8-2fb4105affed"
+    "user_id": "d78f9983-0acc-470a-9e3c-c1cfd0549884"
   },
   "event_type": "daily.data.igg.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
