--- a/docs/event-catalog/daily.data.respiratory_rate.created.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "2c8b6628-9be6-451d-917f-3d278e8acfde"
+    "user_id": "0475078b-9d4d-4081-9e80-8a7952b5c66a"
   },
   "event_type": "daily.data.respiratory_rate.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
