--- a/docs/event-catalog/daily.data.respiratory_rate.updated.mdx
+++ b/docs/event-catalog/daily.data.respiratory_rate.updated.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "73f9ee15-7698-4645-8f6f-cee969257fb5"
+    "user_id": "6b23ddf2-cf2a-4b12-8513-3057a2878a60"
   },
   "event_type": "daily.data.respiratory_rate.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
