--- a/docs/event-catalog/daily.data.steps.created.mdx
+++ b/docs/event-catalog/daily.data.steps.created.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "02b6aa8e-393c-4a0e-a533-9a6740508962"
+    "user_id": "3f645692-a8e2-4974-92a1-8be617e81604"
   },
   "event_type": "daily.data.steps.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
