--- a/docs/event-catalog/daily.data.steps.updated.mdx
+++ b/docs/event-catalog/daily.data.steps.updated.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "2405ba3c-5e40-4ac9-bf58-13300f42ce1f"
+    "user_id": "f94c824b-2cbd-4001-b14d-55377b548992"
   },
   "event_type": "daily.data.steps.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
