--- a/docs/event-catalog/daily.data.stress_level.created.mdx
+++ b/docs/event-catalog/daily.data.stress_level.created.mdx
@@ -67,13 +67,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -119,7 +119,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "1f64b9d7-da06-4e0f-960d-d584296876f0"
+    "user_id": "1224890f-be51-47ca-809c-43dd9d9534bd"
   },
   "event_type": "daily.data.stress_level.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
