--- a/docs/event-catalog/daily.data.stress_level.updated.mdx
+++ b/docs/event-catalog/daily.data.stress_level.updated.mdx
@@ -67,13 +67,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -119,7 +119,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "01ba2f8f-f8d6-4034-b2e9-2432695637e7"
+    "user_id": "f3f037f5-398d-48af-ab36-69583c740926"
   },
   "event_type": "daily.data.stress_level.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
