--- a/docs/event-catalog/daily.data.vo2_max.created.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.created.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "bd84d3fa-4876-4d63-b14c-5ac327f62472"
+    "user_id": "afac5eba-8bb0-4667-8c49-e3a4a27d8eff"
   },
   "event_type": "daily.data.vo2_max.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
