--- a/docs/event-catalog/daily.data.vo2_max.updated.mdx
+++ b/docs/event-catalog/daily.data.vo2_max.updated.mdx
@@ -74,13 +74,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -127,7 +127,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "4f513723-822f-4521-8995-2646f84b3a1c"
+    "user_id": "34f87442-0396-4be9-9dc8-b7f1363be36e"
   },
   "event_type": "daily.data.vo2_max.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
