--- a/docs/event-catalog/daily.data.water.created.mdx
+++ b/docs/event-catalog/daily.data.water.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -121,7 +121,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "49581732-3a3a-47ea-9c38-c147d402a89a"
+    "user_id": "18c65c0a-7783-4522-b949-dabc1d0fc8a9"
   },
   "event_type": "daily.data.water.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
