--- a/docs/event-catalog/daily.data.weight.created.mdx
+++ b/docs/event-catalog/daily.data.weight.created.mdx
@@ -68,13 +68,13 @@ Any of:
 * string
 * null
 </ResponseField>
-<ResponseField name="name" type="string" required="true" deprecated>
+<ResponseField name="name" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="slug" type="string" required="true" deprecated>
+<ResponseField name="slug" type="string | null" deprecated>
 Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 </ResponseField>
-<ResponseField name="logo" type="string" required="true" deprecated>
+<ResponseField name="logo" type="string | null" deprecated>
 Deprecated. Subject to removal after 1 Jan 2024.
 </ResponseField>
 </Expandable>
@@ -120,7 +120,7 @@ URL for source logo
       "type": "ring"
     },
     "source_id": 1,
-    "user_id": "5289269c-d519-4886-8374-9f4e04abccdb"
+    "user_id": "854ff1b2-8000-4d97-98fa-1b0c6574c2c3"
   },
   "event_type": "daily.data.weight.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
