--- a/docs/lab/walk-in/locations.mdx
+++ b/docs/lab/walk-in/locations.mdx
@@ -34,8 +34,8 @@ If specific data regarding the PSC's is required, then you can also query the [`
         "state": "AZ",
         "city": "Phoenix",
         "zip_code": "85006",
-        "address": "1300 N 12th St",
-        "unit": "Ste 300",
+        "first_line": "1300 N 12th St",
+        "second_line": "Ste 300",
         "phone_number": "480-878-3988",
         "fax_number": "844-346-5903",
         "hours": null
