--- a/docs/api-reference/lab-testing/order-psc-info.mdx
+++ b/docs/api-reference/lab-testing/order-psc-info.mdx
@@ -83,8 +83,8 @@ fmt.Printf("Received data %s\n", response)
         "state": "AZ",
         "city": "Phoenix",
         "zip_code": "85006",
-        "address": "1300 N 12th St",
-        "unit": "Ste 300",
+        "first_line": "1300 N 12th St",
+        "second_line": "Ste 300",
         "phone_number": "480-878-3988",
         "fax_number": "844-346-5903",
         "hours": null
