Add partial webhook docs

--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,6 +1,13 @@
 ---
 title: "API"
 ---
+### Partial Results Webhook (Jul 8)
+Vital now supports sending webhooks for partial results, on a team-by-team configuration.
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+Check out the [Partial Results Notifications](/lab/workflow/partials) documentation.
+
+</Accordion>
+
 ### Patient Service Center (PSC) Availability API (Jul 1)
 It is now possible to verify lab PSC availability in regards to a zip code, radius or order.
 
