--- a/docs/lab/at-home-phlebotomy/webhooks.mdx
+++ b/docs/lab/at-home-phlebotomy/webhooks.mdx
@@ -14,7 +14,7 @@ Vital will trigger two kinds of webhook events, [`labtest.order.created`](/event
 The `labtest.order.created` event is triggered when an order is created in the system,
 having the `ordered` status, and all subsequent status changes will trigger a `labtest.order.updated` event in the system.
 
-<Note>The `partial_results` status does not trigger a Webhook currently.</Note>
+<Note>The `partial_results` status does not trigger a Webhook unless specifically requested from Vital.</Note>
 
 The webhook payload body will have the following information if the Order is in the `appointment_scheduled` status:
 
