[VIT-6692] Pull preferences: docs

--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -2,6 +2,20 @@
 title: "API"
 ---
 
+### Extendable Historical Date Ranges (Jul 5)
+We now offer the ability to set custom historical data ranges for wearables providers, with resource-level granularity.
+
+<Accordion icon="lightbulb" iconType="duotone" title="Details" defaultOpen>
+You can now extend the historical pull range for a number of supported providers using the [Org Management API](/api-reference/org-management/team-data-pull-preferences/upsert-team-data-pull-preferences)
+
+<Info>
+Org Management API is available for [the Scale plan](https://tryvital.io/pricing).
+</Info>
+
+Check out the [Set Data Pull Preferences](/api-reference/org-management/team-data-pull-preferences/upsert-team-data-pull-preferences),
+[Get Data Pull Preferences](/api-reference/org-management/team-data-pull-preferences/get-team-scope-requirements), [Delete Data Pull Preferences](/api-reference/org-management/team-data-pull-preferences/delete-team-scope-requirements) endpoint documentation for more details.
+</Accordion>
+
 ### Introspection: Historical Pull Timeline (May 24)
 The Historical Pull Introspection endpoint now reports the execution timeline of historical pulls.
 
